@@ -230,9 +230,9 @@ if test x"$enable_gunzip" = xno; then
   FSYS_CFLAGS="$FSYS_CFLAGS -DNO_DECOMPRESSION=1"
 fi
 
-AC_ARG_ENABLE(md5password,
-  [  --disable-md5password   disable MD5 passwords in Stage 2])
-if test "x$enable_md5password" != xno; then
+AC_ARG_ENABLE(md5-password,
+  [  --disable-md5-password  disable MD5 password support in Stage 2])
+if test "x$enable_md5_password" != xno; then
   CFLAGS="$CFLAGS -DUSE_MD5_PASSWORDS=1"
 fi
 
